# dayflow

./: .gitignore  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  README.ko.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
Dayflow-macOS/: Package.swift  build.sh  com.swryu.dayflow.plist
Dayflow-macOS/Sources/DayflowApp/: AnthropicClient.swift  BlockEditor.swift  ContentView.swift  DayflowApp.swift  DayflowDB.swift  DayflowStore.swift  DesignSystem.swift  DevRebuild.swift  GlobalHotkey.swift  HolidayStore.swift  InlineTextField.swift  L10n.swift  LLMClient.swift  MarkdownBlocks.swift  MarkdownEditor.swift  MarkdownWebEditor.swift  Models.swift  MonthPlanHistorySheet.swift  OutlineTextField.swift  QuickThrowWindow.swift  SettingsView.swift
Dayflow-macOS/Sources/DayflowApp/Resources/: holidays.json
Dayflow-macOS/Sources/DayflowApp/Resources/en.lproj/: Localizable.strings
Dayflow-macOS/Sources/DayflowApp/Resources/ko.lproj/: Localizable.strings
Dayflow-macOS/tools/: capture_screenshots.sh  make_icon.py
plugins/: dayflow.5m.py
scripts/: hammerspoon-snippet.lua
src/dayflow/: __init__.py
src/dayflow/cli/: main.py
src/dayflow/data/: __init__.py  models.py  repo.py  schema.py  vault.py
src/dayflow/review/: __init__.py  daily.py  prompt.py
src/dayflow/tui/: app.py
src/dayflow/tui/widgets/: throw_modal.py
tests/: test_cli.py  test_repo.py  test_review.py  test_tui_smoke.py
