[project]
name = "dayflow"
version = "0.1.0"
description = "Personal calendar / inbox-throw TUI for daily task tracking"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "swryu" }]
dependencies = [
    "textual>=0.85.0",
    "click>=8.1.7",
    "anthropic>=0.40.0",
]

[project.scripts]
dayflow = "dayflow.cli.main:cli"
df = "dayflow.tui.app:run"
inb = "dayflow.cli.main:inbox_add_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayflow"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
