[project]
name = "dayflow"
version = "0.1.0"
description = "Personal calendar — SwiftUI macOS app with a Python data layer"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "swryu" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dayflow"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
